apps/ot/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ot-strip-prefix
  namespace: myargocd
spec:
  stripPrefix:
    prefixes:
      - /ot
