apps/ot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-ot
  labels:
    app: ot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ot
  template:
    metadata:
      labels:
        app: ot
    spec:
      containers:
        - name: php
          image: php:8.1-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-code
              mountPath: /var/www/html
      volumes:
        - name: app-code
          emptyDir: {}
